--- a/Draw/Controller/Draw/Offline/OfflineDrawViewController.xib
+++ b/Draw/Controller/Draw/Offline/OfflineDrawViewController.xib
@@ -376,7 +376,7 @@
 					<object class="IBUIButton" id="172150538">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{203, 373}, {45, 37}}</string>
+						<string key="NSFrame">{{213, 377}, {30, 32}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="70881159"/>
@@ -388,9 +388,9 @@
 						<reference key="IBUIHighlightedTitleColor" ref="373991744"/>
 						<reference key="IBUINormalTitleColor" ref="373991744"/>
 						<reference key="IBUINormalTitleShadowColor" ref="309240068"/>
-						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
+						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">red_button@2x.png</string>
+							<string key="NSResourceName">draft@2x.png</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="300407582"/>
 						<reference key="IBUIFont" ref="812508533"/>
@@ -809,6 +809,25 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/ColorView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">EntryController</string>
+					<string key="superclassName">PPViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">clickBackButton:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">clickBackButton:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">clickBackButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/EntryController.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -1766,12 +1785,12 @@
 				<string>back@2x.png</string>
 				<string>change_bg@2x.png</string>
 				<string>clean@2x.png</string>
+				<string>draft@2x.png</string>
 				<string>eraser@2x.png</string>
 				<string>normalpallets@2x.png</string>
 				<string>orange_button@2x.png</string>
 				<string>paper@2x.png</string>
 				<string>paperclip@2x.png</string>
-				<string>red_button@2x.png</string>
 				<string>topwood@2x.png</string>
 				<string>wood_bg@2x.png</string>
 			</object>
@@ -1780,12 +1799,12 @@
 				<string>{74, 74}</string>
 				<string>{61, 68}</string>
 				<string>{55, 66}</string>
+				<string>{62, 68}</string>
 				<string>{42, 67}</string>
 				<string>{640, 81}</string>
 				<string>{71, 84}</string>
 				<string>{640, 960}</string>
 				<string>{388, 79}</string>
-				<string>{71, 84}</string>
 				<string>{640, 99}</string>
 				<string>{640, 960}</string>
 			</object>
