--- a/Draw/Facetime/Controller/FacetimeMainController.xib
+++ b/Draw/Facetime/Controller/FacetimeMainController.xib
@@ -123,7 +123,7 @@
 						<string key="NSFrame">{{147, 145}, {72, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="1046297665"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -346,20 +346,6 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">FacetimeMainController</string>
 					<string key="superclassName">PPViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="test">TestView</string>
-						<string key="testDiceAvatar">DiceAvatarView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="test">
-							<string key="name">test</string>
-							<string key="candidateClassName">TestView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="testDiceAvatar">
-							<string key="name">testDiceAvatar</string>
-							<string key="candidateClassName">DiceAvatarView</string>
-						</object>
-					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/FacetimeMainController.h</string>
@@ -371,14 +357,6 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/PPViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">TestView</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/TestView.h</string>
 					</object>
 				</object>
 			</array>
